--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,17 @@
 }
 
 :root {
-    --color-primary: #6963ce;
+    --color-primary: #454444;
     --color-success: #00bf8e;
     --color-warning: #f7c94b;
-    --color-danger: #f75842;
+    --color-danger: #2d2926;
     --color-danger-variant: rgba(247,88,66,0.4);
     --color-white: #fff;
     --color-light: rgba(255,255,255,0.7);
     --color-black: #000;
-    --color-bg: #1f2641;
-    --color-bg1: #2e3267;
-    --color-bg2: #424890;
+    --color-bg: #0a0a0a;
+    --color-bg1: #161616;
+    --color-bg2: #1c1c1c;
 
     --container-width-lg: 80%;
     --container-width-md: 90%;
@@ -92,6 +92,7 @@ img {
     border: 1px solid transparent;
     font-weight: 500;
     transition: var(--transition);
+    border-radius: 0.5rem;
 }
 
 .btn:hover {
@@ -319,6 +320,7 @@ header{
     height: fit-content;
     background: var(--color-primary);
     cursor: pointer;
+    border-radius: 0.5rem;
 }
 
 .faq h4 {
